tooling/nargo_cli/tests/snapshots/execution_success/fold_after_inlined_calls/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u32) {
    assert(increment(x) == (x + 1));
    foo(x);
}

#[fold]
fn foo(x: u32) {
    assert(x == 1);
}

fn increment(x: u32) -> u32 {
    x + 1
}
