tooling/nargo_cli/tests/snapshots/execution_success/fold_after_inlined_calls/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
acir(inline) fn main f0 {
  b0(v0: u32):
    (no terminator instruction)
}
